[package]
name = "mydocker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
libc = "0.2.171"
log = "0.4.20"
nix = { version = "0.29.0", features = ["mount", "signal"] }
simple_logger = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
rand = "0.9.1"
